Fix image alignment with float

--- a/assets/less/document-list.less
+++ b/assets/less/document-list.less
@@ -258,23 +258,14 @@ ul.anyfetch-pipe-list {
               white-space: nowrap;
               word-wrap: break-word;
             }
-            .anyfetch-flex {
-              display: flex;
-              &.anyfetch-flex-row {
-                flex-direction: row;
-              }
-            }
             figure.anyfetch-aside-image {
+              float: right;
               margin: 0;
               margin-left: 1em;
 
               border: 1px solid #DBDBDB;
               padding: 2px;
               max-height: 3em;
-              img {
-                height: 100%;
-                width: 100%;
-              }
             }
           }
         }
